Resolve "The bottom of the email character is truncated"

--- a/web-frontend/modules/core/assets/scss/components/dashboard.scss
+++ b/web-frontend/modules/core/assets/scss/components/dashboard.scss
@@ -30,6 +30,7 @@
   @extend %ellipsis;
 
   font-size: 18px;
+  line-height: 1.25;
   font-weight: 700;
   max-width: 100%;
   position: relative;
