--- a/web-frontend/modules/core/assets/scss/components/sidebar.scss
+++ b/web-frontend/modules/core/assets/scss/components/sidebar.scss
@@ -90,6 +90,7 @@
   @extend %ellipsis;
 
   font-size: 12px;
+  line-height: 1.25;
   color: $color-neutral-600;
 }
 
